--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-big-calendar": "^0.40.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
